--- a/public/wp-content/uploads/elementor/css/post-19.css
+++ b/public/wp-content/uploads/elementor/css/post-19.css
@@ -4,7 +4,7 @@
 	--e-global-color-text:#7A7A7A;
 	--e-global-color-accent:#61CE70;
 	--e-global-color-e9e9dec:#334250;
-	--e-global-typography-primary-font-family:"Roboto";
+	--e-global-typography-primary-font-family:"Oswald";
 	--e-global-typography-primary-font-weight:600;
 	--e-global-typography-secondary-font-family:"Roboto Slab";
 	--e-global-typography-secondary-font-weight:400;
