--- a/public/wp-content/themes/vezaconslt/assets/css/global.css
+++ b/public/wp-content/themes/vezaconslt/assets/css/global.css
@@ -29,7 +29,7 @@ body {
   line-height:34px;
   font-weight:500;
   background:#ffffff;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-size:cover;
   background-repeat:no-repeat;
   background-position:center top;
@@ -89,7 +89,7 @@ a:hover{
 }
 
 input,button,select,textarea{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 16px;
   background: transparent;
@@ -127,7 +127,7 @@ textarea:focus{
 
 p{
   position: relative;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #73727c;
   font-weight: 500;
   margin: 0px;
@@ -136,7 +136,7 @@ p{
 
 h1,h2,h3,h4,h5,h6{
   position:relative;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 700;
   color: #1b182f;
   margin: 0px;
@@ -204,7 +204,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .handle-preloader .animation-preloader .txt-loading .letters-loading{
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 15px;
   display: inline-block;
@@ -327,7 +327,7 @@ img {
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #fff !important;
   text-align: center;
   padding: 12px 30px;
