--- a/public/wp-content/themes/vezaconslt/assets/css/custom.css
+++ b/public/wp-content/themes/vezaconslt/assets/css/custom.css
@@ -278,7 +278,7 @@
 	display: inline-block;
 	font-size: 16px;
 	font-weight: 500;
-	color: #73727c;
+	color: black;
 	width: 100%;
 }
 
@@ -294,7 +294,7 @@
 .blog-sidebar .tagcloud a{
 	background: #fff;
 	border-radius: 8px;
-	color: #73727c;
+	color: black;
 	display: inline-block;
 	font-size: 11px !important;
 	font-weight: 700;
