--- a/public/wp-content/themes/vezaconslt/assets/css/global.css
+++ b/public/wp-content/themes/vezaconslt/assets/css/global.css
@@ -25,7 +25,7 @@
 
 body {
   font-size:16px;
-  color:#73727c;
+  color:black;
   line-height:34px;
   font-weight:500;
   background:#ffffff;
@@ -128,7 +128,7 @@ textarea:focus{
 p{
   position: relative;
   font-family: 'Lato', sans-serif;
-  color: #73727c;
+  color: black;
   font-weight: 500;
   margin: 0px;
   transition: all 500ms ease;
@@ -756,7 +756,7 @@ img {
   padding: 32px 0px;
   font-weight:500;
   opacity:1;
-  color: #73727c;
+  color: black;
   overflow: hidden;
   z-index:1;
   -webkit-transition:all 500ms ease;
