Change button text

--- a/src/partial/sign-form.pug
+++ b/src/partial/sign-form.pug
@@ -28,4 +28,4 @@ form.styled(netlify netlify-honeypot="truly-important-information" name="request
 		label(for="sign-truly-important-information")
 			| Don’t fill this field
 		input#sign-truly-important-information(type="text" name="truly-important-information")
-	button(type="submit") Send request
+	button(type="submit") Request a sign
