Reformat: sentence per line

--- a/src/index.pug
+++ b/src/index.pug
@@ -94,22 +94,11 @@ html(lang="en-CA")
 				.prose.constrain-width
 					h2 Meet Mark
 					p
-						| Born and raised in East Vancouver as a third
-						| generation East Vancouver resident, Mark Wiens is an
-						| exemplary community leader and family man. Mark’s
-						| dedication to the community is demonstrated by his
-						| extensive work and contribution to many multicultural
-						| and community organizations.
+						| Born and raised in East Vancouver as a third generation East Vancouver resident, Mark Wiens is an exemplary community leader and family man.
+						| Mark’s dedication to the community is demonstrated by his extensive work and contribution to many multicultural and community organizations.
 					p
-						| Before deciding to run in this election, Mark achieved
-						| a high level of success in the real estate industry,
-						| having helped hundreds of families make the right move
-						| for them, and being eligible to be licensed at the
-						| highest possible licensing level. Mark serves the
-						| profession and the public at large as a Director at
-						| Greater Vancouver Realtors, the Vancouver member-based
-						| professional association representing around 15,000
-						| Realtors.
+						| Before deciding to run in this election, Mark achieved a high level of success in the real estate industry, having helped hundreds of families make the right move for them, and being eligible to be licensed at the highest possible licensing level.
+						| Mark serves the profession and the public at large as a Director at Greater Vancouver Realtors, the Vancouver member-based professional association representing around 15,000 Realtors.
 						|
 						+img("family.png", [4256, 4799], [280, 560, 720, 840], {})(
 							id="family-image-5"
@@ -119,10 +108,7 @@ html(lang="en-CA")
 							loading="lazy"
 						)
 						|
-						| Prior to entering the real estate industry,
-						| Mark was an owner and operator of a successful
-						| landscape maintenance company employing several staff
-						| members.
+						| Prior to entering the real estate industry, Mark was an owner and operator of a successful landscape maintenance company employing several staff members.
 					+img("family.png", [4256, 4799], [280, 560, 720, 840], {})(
 						id="family-image-4"
 						class="family-image"
@@ -131,9 +117,7 @@ html(lang="en-CA")
 						loading="lazy"
 					)
 					p
-						| To better engage with the community around him, Mark
-						| started studying Mandarin Chinese at university and
-						| continues to build on his language skills.
+						| To better engage with the community around him, Mark started studying Mandarin Chinese at university and continues to build on his language skills.
 						|
 						+img("family.png", [4256, 4799], [280, 560, 720, 840], {})(
 							id="family-image-3"
@@ -143,8 +127,7 @@ html(lang="en-CA")
 							loading="lazy"
 						)
 						|
-						| His success stems from helping those around him,
-						| working hard, and listening to others.
+						| His success stems from helping those around him, working hard, and listening to others.
 						|
 						+img("family.png", [4256, 4799], [240, 280, 560, 720], {})(
 							id="family-image-2"
@@ -154,8 +137,7 @@ html(lang="en-CA")
 							loading="lazy"
 						)
 						|
-						| This is the same approach he will take when serving as
-						| the next Member of Parliament for Vancouver East.
+						| This is the same approach he will take when serving as the next Member of Parliament for Vancouver East.
 					+img("family.png", [4256, 4799], [200, 400, 600], { rect: "453,0,3803,4799" })(
 						id="family-image-1"
 						class="family-image"
@@ -164,8 +146,7 @@ html(lang="en-CA")
 						loading="lazy"
 					)
 					p
-						| In his free time, Mark enjoys spending time with his
-						| wife, two boys and two corgis.
+						| In his free time, Mark enjoys spending time with his wife, two boys and two corgis.
 
 					.clearfix#meet-clearfix
 
@@ -173,24 +154,6 @@ html(lang="en-CA")
 				.prose.constrain-width
 					h2 Why Mark?
 					p
-						| One hundred years ago my descendants came to Canada
-						| with nothing, and our country has given me and my
-						| family everything we have. It’s time to give back,
-						| especially in this current time of crisis around the
-						| world, across the country and right here at home in
-						| Vancouver East where we are facing unprecedented
-						| challenges. The prohibitive cost of housing, the
-						| general rising cost of living, the deterioration of
-						| public safety, economic instability and even
-						| annexation threats from the United States are all
-						| threats we are now facing in a way we have never felt
-						| before. Adding to this, the values of equality,
-						| diversity, inclusion, reconciliation and even Canadian
-						| sovereignty are under threat. Canadians have always
-						| proven that when we stand united and work together,
-						| there’s nothing we can’t accomplish. I’m running to
-						| protect the values that make our country strong –
-						| values which are now at risk.
 					picture
 						+source("team-with-flyers.jpg", [3456, 5184], [280, 560, 840, 1024, 1536], {
 							rect: "0,824,3456,3452",
@@ -206,22 +169,17 @@ html(lang="en-CA")
 							sizes="auto, 91vw"
 							loading="lazy"
 						)
+						| One hundred years ago my descendants came to Canada with nothing, and our country has given me and my family everything we have.
+						| It’s time to give back, especially in this current time of crisis around the world, across the country and right here at home in Vancouver East where we are facing unprecedented challenges.
+						| The prohibitive cost of housing, the general rising cost of living, the deterioration of public safety, economic instability and even annexation threats from the United States are all threats we are now facing in a way we have never felt before.
+						| Adding to this, the values of equality, diversity, inclusion, reconciliation and even Canadian sovereignty are under threat.
+						| Canadians have always proven that when we stand united and work together, there’s nothing we can’t accomplish.
+						| I’m running to protect the values that make our country strong – values which are now at risk.
 					p
-						| As a real estate professional, I’ve seen first-hand
-						| how the high cost and low availability of suitable
-						| housing has caused many families to make difficult
-						| decisions and huge sacrifices. My work as a Director
-						| at Greater Vancouver Realtors has allowed me to
-						| witness the challenges and opportunities for real
-						| estate at an institutional and government level. My
-						| experience volunteering with multicultural societies,
-						| and with the arts, has imprinted on me the importance
-						| of inclusion and being able to express oneself, and
-						| the untapped potential of our diverse society. As a
-						| former small business owner, I know how hard it can be
-						| to make ends meet and I understand that the government
-						| has a role in assisting businesses to expand which in
-						| turn will lead to more hiring and better jobs.
+						| As a real estate professional, I’ve seen first-hand how the high cost and low availability of suitable housing has caused many families to make difficult decisions and huge sacrifices.
+						| My work as a Director at Greater Vancouver Realtors has allowed me to witness the challenges and opportunities for real estate at an institutional and government level.
+						| My experience volunteering with multicultural societies, and with the arts, has imprinted on me the importance of inclusion and being able to express oneself, and the untapped potential of our diverse society.
+						| As a former small business owner, I know how hard it can be to make ends meet and I understand that the government has a role in assisting businesses to expand which in turn will lead to more hiring and better jobs.
 						|
 						+img("mark-at-grocer.jpg", [3456, 5184], [180, 300, 360, 540, 600, 900], { rect: "156,1200,3300,3984" })(
 							id="mark-at-grocer"
@@ -230,22 +188,13 @@ html(lang="en-CA")
 							loading="lazy"
 						)
 						|
-						| As a husband to a first generation immigrant, I know
-						| not only the challenges immigrants face, but also the
-						| incredible benefits they will bring to our society
-						| when we support them. As a sibling to a brother who
-						| has suffered life altering mental illness for decades,
-						| I have insight into real solutions to the complex
-						| problems of mental health and the homeless crisis.
+						| As a husband to a first generation immigrant, I know not only the challenges immigrants face, but also the incredible benefits they will bring to our society when we support them.
+						| As a sibling to a brother who has suffered life altering mental illness for decades, I have insight into real solutions to the complex problems of mental health and the homeless crisis.
 					p
-						| Together we have so much potential. My promise to you
-						| is to work tirelessly every day across party lines to
-						| make real improvement in our society. For too long
-						| Vancouver East has not had a meaningful seat at the
-						| table in Ottawa. I’m here to listen to you, and
-						| transform your concerns and needs into meaningful
-						| change that you and your family can feel on a daily
-						| basis.
+						| Together we have so much potential.
+						| My promise to you is to work tirelessly every day across party lines to make real improvement in our society.
+						| For too long Vancouver East has not had a meaningful seat at the table in Ottawa.
+						| I’m here to listen to you, and transform your concerns and needs into meaningful change that you and your family can feel on a daily basis.
 					.clearfix
 
 			section.padded-x#get-involved
@@ -253,9 +202,8 @@ html(lang="en-CA")
 					.prose
 						h2 Get involved
 						p
-							| Join my team and make a positive difference in
-							| bringing real change to Vancouver East! Enter your
-							| information and our team will be in contact soon.
+							| Join my team and make a positive difference in bringing real change to Vancouver East!
+							| Enter your information and our team will be in contact soon.
 						+img("team-huddle.jpg", [5184, 3456], [212, 360, 424, 636, 720, 1080], {})(
 							id="team-huddle"
 							alt="Mark Wiens and his team huddle in a circle with their arms in and hands touching in the middle. They all wear matching red shirts."
@@ -269,19 +217,17 @@ html(lang="en-CA")
 					.prose
 						h2 Request a sign
 						p
-							| Show your support for real change in Vancouver East by
-							| having a lawn sign placed at your home. Our team will
-							| confirm with you once your information has been
-							| submitted. Thank you for your support!
+							| Show your support for real change in Vancouver East by having a lawn sign placed at your home.
+							| Our team will confirm with you once your information has been submitted.
+							| Thank you for your support!
 					include partial/sign-form.pug
 
 			section.padded-x#donate
 				.prose.constrain-width
 					h2 Donate
 					p
-						| We need your help. Your generous donations will keep
-						| Canada moving forward, and also qualify for a tax
-						| credit of up to 75%
+						| We need your help.
+						| Your generous donations will keep Canada moving forward, and also qualify for a tax credit of up to 75%
 					p
 						a.button(href="https://secure.liberal.ca/eda?campidVOID=7015b000002D7M8AAK&campid=7015b000002D7MIAA0&sponsorContactId=003j000000UsWkyAAF&eda=59036" target="_blank")
 							| Donate now
