Add missing full stop

--- a/src/index.pug
+++ b/src/index.pug
@@ -227,7 +227,7 @@ html(lang="en-CA")
 					h2 Donate
 					p
 						| We need your help.
-						| Your generous donations will keep Canada moving forward, and also qualify for a tax credit of up to 75%
+						| Your generous donations will keep Canada moving forward, and also qualify for a tax credit of up to 75%.
 					p
 						a.button(href="https://secure.liberal.ca/eda?campidVOID=7015b000002D7M8AAK&campid=7015b000002D7MIAA0&sponsorContactId=003j000000UsWkyAAF&eda=59036" target="_blank")
 							| Donate now
