--- a/src/index.pug
+++ b/src/index.pug
@@ -66,6 +66,8 @@ html(lang="en-CA")
 							use(xlink:href="/maple-leaf.svg#maple-leaf")
 						|
 						big Mark Wiens
+						//- Unsure why I need two pipes here for whitespace
+						|
 						|
 						small for Vancouver East
 
