--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ html {
 	font-family: var(--font-base);
 	scroll-padding-top: var(--header-height);
 	scroll-behavior: smooth;
-	accent-color: var(--accent-yellow);
+	accent-color: var(--liberal-red);
 
 	@media (prefers-reduced-motion) {
 		scroll-behavior: initial;
