Fix skip link focus colour

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,8 @@ html(lang="en-CA")
 	head
 		include partial/head.pug
 	body
-		a#skip-link.visually-hidden.focusable(href="#main") Skip to main content
+		.dark
+			a#skip-link.visually-hidden.focusable(href="#main") Skip to main content
 		header#header.dark
 			include partial/header.pug
 		main#main
