Add accessible label to back to top link

--- a/src/partial/header.pug
+++ b/src/partial/header.pug
@@ -2,7 +2,7 @@
 	.constrain-width
 		.flex
 			#title-lockup
-				a(href="#")
+				a(href="#" aria-label="Scroll to top")
 					svg.logo(width="64" height="64" viewBox="0 0 77.053 77.053" fill="currentColor" aria-hidden="true")
 						use(xlink:href="/logo-l.svg#logomark" height="100%" width="100%")
 				h1 #[strong Mark Wiens]#[span.visually-hidden ,] #[small Liberal Party candidate for Vancouver East]
