Change background colours

--- a/src/index.pug
+++ b/src/index.pug
@@ -72,7 +72,7 @@ html(lang="en-CA")
 						|
 						small for Vancouver East
 
-			section.padded-x#meet-mark.dark
+			section.padded-x#meet-mark
 				.prose.constrain-width
 					picture
 						+source("mark-at-park.jpg", [3456, 5184], [384, 768, 1152], {
@@ -153,7 +153,7 @@ html(lang="en-CA")
 
 					.clearfix#meet-clearfix
 
-			section.padded-x#why-mark
+			section.padded-x#why-mark.dark
 				.prose.constrain-width
 					h2 Why Mark?
 					p
@@ -200,7 +200,7 @@ html(lang="en-CA")
 						| I’m here to listen to you, and transform your concerns and needs into meaningful change that you and your family can feel on a daily basis.
 					.clearfix
 
-			section.padded-x#get-involved.dark
+			section.padded-x#get-involved
 				.flex.constrain-width
 					.prose
 						h2 Get involved
