--- a/src/style.css
+++ b/src/style.css
@@ -268,6 +268,16 @@ form.styled {
 		row-gap: calc(var(--padding-std) / 4);
 	}
 
+	:is(
+		fieldset:has([required]) legend,
+		fieldset:has([required]:not(.option-grid *)) label
+	)::after {
+		content: "\2009*";
+		content: "\2009*" / ""; /* Screen readers should already announce that it's required */
+		color: var(--accent-color);
+		font-weight: 900;
+	}
+
 	input:is([type="text"], [type="email"], [type="tel"]), textarea, select {
 		font-family: inherit;
 		font-size: inherit;
