--- a/src/index.pug
+++ b/src/index.pug
@@ -70,6 +70,17 @@ html(lang="en-CA")
 						|
 						small for Vancouver East
 
+			section#video
+				iframe(
+					width="560" height="315"
+					src="https://www.youtube.com/embed/mu5Nm6wXtdc?si=uFOpyQddt40XtBhm"
+					title="YouTube video player"
+					frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin"
+					allowfullscreen
+				)
+
 			section.padded-x#meet-mark
 				.prose.constrain-width
 					picture
