--- a/src/style.css
+++ b/src/style.css
@@ -302,7 +302,7 @@ form.styled {
 
 	input:is([type="text"], [type="email"], [type="tel"], [type="radio"], [type="checkbox"]), textarea, select, button {
 		&:focus-visible {
-			outline: 2px solid var(--focus-ring-color);
+			outline: 2px solid var(--accent-color);
 			outline-offset: 2px;
 		}
 	}
