Add social links

--- a/src/partial/footer.pug
+++ b/src/partial/footer.pug
@@ -16,6 +16,8 @@
 					dt Email
 					dd
 						a(href="mailto:hello@votemarkwiens.ca") hello@votemarkwiens.ca
+				nav(aria-label="Social network links")
+					include socials.pug
 
 	p#fineprint
 		| Authorized by the official agent of Mark Wiens
