--- a/src/partial/header.pug
+++ b/src/partial/header.pug
@@ -14,6 +14,8 @@
 					line(x1="2" y1="16" x2="28" y2="16")
 					line(x1="2" y1="26" x2="28" y2="26")
 #main-nav(inert)
-	.constrain-width
+	#main-nav-container.constrain-width
 		nav(aria-label="Main navigation")
 			include nav.pug
+		nav(aria-label="Social network links")
+			include socials.pug
