--- a/src/index.pug
+++ b/src/index.pug
@@ -181,7 +181,7 @@ html(lang="en-CA")
 							sizes="auto, 91vw"
 							loading="lazy"
 						)
-						| One hundred years ago my descendants came to Canada with nothing, and our country has given me and my family everything we have.
+						| One hundred years ago my ancestors came to Canada with nothing, and our country has given me and my family everything we have.
 						| It’s time to give back, especially in this current time of crisis around the world, across the country and right here at home in Vancouver East where we are facing unprecedented challenges.
 						| The prohibitive cost of housing, the general rising cost of living, the deterioration of public safety, economic instability and even annexation threats from the United States are all threats we are now facing in a way we have never felt before.
 						| Adding to this, the values of equality, diversity, inclusion, reconciliation and even Canadian sovereignty are under threat.
