Update donate link to match vanity destination

--- a/src/index.pug
+++ b/src/index.pug
@@ -241,7 +241,7 @@ html(lang="en-CA")
 						| We need your help.
 						| Your generous donations will keep Canada moving forward, and also qualify for a tax credit of up to 75%.
 					p
-						a.button(href="https://secure.liberal.ca/eda?campidVOID=7015b000002D7M8AAK&campid=7015b000002D7MIAA0&sponsorContactId=003j000000UsWkyAAF&eda=59036" target="_blank")
+						a.button(href="https://secure.liberal.ca/eda?utm_source=secure.liberal.ca--victoryfund&utm_medium=donation-switch&utm_content=make-this-one-time-gift&campidVOID=7015b000002D7M8AAK&campid=7015b000002D7MIAA0&sponsorContactId=003j000000UsWkyAAF&eda=59036" target="_blank")
 							| Donate now
 							|
 							svg.line-icon(width="10" height="10" viewBox="0 0 32 32" style="vertical-align: baseline; height: 1ex; width: 1ex; overflow: visible;")
