--- a/src/style.css
+++ b/src/style.css
@@ -355,12 +355,12 @@ dl.grid {
 	background: var(--accent-steel);
 	padding: var(--padding-std);
 	color: white;
-	z-index: 10;
+	z-index: 10; /* Must be above header */
 }
 
 #header {
 	position: sticky;
-	z-index: 1;
+	z-index: 5; /* Must be above Youtube embed */
 	top: 0;
 	left: 0;
 
